--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,5 @@
 @import 'simple-scrollbar/simple-scrollbar.css';
+///@import 'simplebar/dist/simplebar.css';
 $link_color: rgb(0,100,200);
 $sv-color: #ff3e00;
 
@@ -88,4 +89,5 @@ p {
 .ss-scroll {
     background-color: $sv-color;
     opacity: 1;
+    transition: height 0.5s;
 }
